@@ -1,3 +1,7 @@
+2023-08-08  ChenPi11  <wushengwuxi-msctinoulk@outlook.com>
+
+    Add CMake buildsystem support.
+
 2023-08-07  ChenPi11  <wushengwuxi-msctinoulk@outlook.com>
 
     Update docs.
